[gd_scene load_steps=44 format=3 uid="uid://b1ia5lvitx6pp"]

[ext_resource type="Texture2D" uid="uid://c41uyuyft00s8" path="res://Textures/Player/playerShadow1.png" id="1_ve2m8"]
[ext_resource type="Texture2D" uid="uid://b0e6aylgwvo8r" path="res://Textures/redesign/redesign_walking_animation1.png" id="2_qla6q"]
[ext_resource type="Texture2D" uid="uid://bwvbcojtx086u" path="res://Textures/redesign/redesign_walking_animation2.png" id="3_am0tm"]
[ext_resource type="Texture2D" uid="uid://btlxmnq1oime6" path="res://Textures/redesign/redesign_walking_animation3.png" id="4_74tr1"]
[ext_resource type="Texture2D" uid="uid://bcjoa0svfc6l3" path="res://Textures/redesign/redesign_walking_animation4.png" id="5_2l6g6"]
[ext_resource type="Texture2D" uid="uid://b17khm71ugbue" path="res://Textures/redesign/redesign_walking_animation5.png" id="6_5m0i3"]
[ext_resource type="Texture2D" uid="uid://6d4ng2y0bli0" path="res://Textures/redesign/redesign_walking_animation6.png" id="7_tlk41"]
[ext_resource type="Texture2D" uid="uid://bemoucxa6w6t2" path="res://Textures/redesign/redesign_walking_animation7.png" id="8_h4h5p"]
[ext_resource type="Texture2D" uid="uid://cciaojqywrp8a" path="res://Textures/redesign/redesign_walking_animation8.png" id="9_36eb4"]
[ext_resource type="Texture2D" uid="uid://bsqhwqu7ryvo8" path="res://Textures/Player/rogue_left.png" id="10_qfktl"]
[ext_resource type="Texture2D" uid="uid://cddulfpnfo2vg" path="res://Textures/Player/rogue_left2.png" id="11_03jgv"]
[ext_resource type="Texture2D" uid="uid://cnonh3lcj0wvf" path="res://Textures/Player/rogue_left3.png" id="12_6ojfq"]
[ext_resource type="Texture2D" uid="uid://dkkho3shgtvxa" path="res://Textures/Player/rogue_left4.png" id="13_0g23h"]
[ext_resource type="Texture2D" uid="uid://d3imq42frtetc" path="res://Textures/Player/rogue_left5.png" id="14_fpstb"]
[ext_resource type="Texture2D" uid="uid://2evarfon81sp" path="res://Textures/Player/rogue_left6.png" id="15_qq4v4"]
[ext_resource type="Texture2D" uid="uid://u3bdo2u1umyf" path="res://Textures/Player/rogue_left7.png" id="16_vfuav"]
[ext_resource type="Texture2D" uid="uid://ctm3pujorflxm" path="res://Textures/Player/rogue_left8.png" id="17_0b1hy"]
[ext_resource type="Texture2D" uid="uid://ckp5sds81kkfd" path="res://Textures/Player/rogue_right.png" id="18_fm3ix"]
[ext_resource type="Texture2D" uid="uid://qul2pbli8756" path="res://Textures/Player/rogue_right2.png" id="19_su8wb"]
[ext_resource type="Texture2D" uid="uid://bw8dhkls1yjjr" path="res://Textures/Player/rogue_right3.png" id="20_s5ip6"]
[ext_resource type="Texture2D" uid="uid://c73udbm6fwv1g" path="res://Textures/Player/rogue_right4.png" id="21_27wcc"]
[ext_resource type="Texture2D" uid="uid://65rylf7lxwln" path="res://Textures/Player/rogue_right5.png" id="22_23fdb"]
[ext_resource type="Texture2D" uid="uid://b2e4jc4t7t1qj" path="res://Textures/Player/rogue_right6.png" id="23_1yxco"]
[ext_resource type="Texture2D" uid="uid://cbd6r6mjo6j7b" path="res://Textures/Player/rogue_right7.png" id="24_ecqls"]
[ext_resource type="Texture2D" uid="uid://dlguxp7gpfi3p" path="res://Textures/Player/rogue_right8.png" id="25_iy5e0"]
[ext_resource type="Texture2D" uid="uid://cii8ncupq84l6" path="res://Textures/redesign/redesign_walking_up1.png" id="26_p6t41"]
[ext_resource type="Texture2D" uid="uid://c8vmjn4dbwvxc" path="res://Textures/redesign/redesign_walking_up2.png" id="27_i8egj"]
[ext_resource type="Texture2D" uid="uid://dxwv4sxyx160j" path="res://Textures/redesign/redesign_walking_up3.png" id="28_s6ecs"]
[ext_resource type="Texture2D" uid="uid://dt8rjb1c0tvlv" path="res://Textures/redesign/redesign_walking_up4.png" id="29_p8ai1"]
[ext_resource type="Texture2D" uid="uid://cptgsh7fyo61o" path="res://Textures/redesign/redesign_walking_up5.png" id="30_vdh84"]
[ext_resource type="Texture2D" uid="uid://b7g6i5wc0a7xu" path="res://Textures/redesign/redesign_walking_up6.png" id="31_07atg"]
[ext_resource type="Texture2D" uid="uid://kiui1rxufs34" path="res://Textures/redesign/redesign_walking_up7.png" id="32_5ir67"]
[ext_resource type="Texture2D" uid="uid://dwles8tm5ommv" path="res://Textures/redesign/redesign_walking_up8.png" id="33_35f7t"]
[ext_resource type="Script" path="res://companionFollow.gd" id="34_0kh7o"]
[ext_resource type="Texture2D" uid="uid://cyfhps3oxpgku" path="res://Textures/companion/body.png" id="35_gr6gp"]
[ext_resource type="Texture2D" uid="uid://du13c28pvvfmw" path="res://Textures/companion/body1.png" id="36_n46o1"]
[ext_resource type="Texture2D" uid="uid://curlvo27w7w3r" path="res://Textures/companion/body2.png" id="37_1eyjr"]
[ext_resource type="Texture2D" uid="uid://d0mhlxrxqiyek" path="res://Textures/companion/body3.png" id="38_x7n7g"]

[sub_resource type="GDScript" id="1"]
script/source = "extends CharacterBody2D

var speed = 60
var foliageTileMap;


func get_input():
	velocity = Vector2()
	
	if Input.is_action_pressed('right'):
		velocity.x += 1
		
	if Input.is_action_pressed('left'):
		velocity.x -= 1
		
	if Input.is_action_pressed('down'):
		velocity.y += 1
		
	if Input.is_action_pressed('up'):
		velocity.y -= 1
		
	velocity = velocity.normalized() * speed

func _unhandled_input(event):
	if event is InputEventKey:
		if event.pressed and event.keycode == KEY_E:
			foliageTileMap = get_parent().find_child(\"foliageTileMap\",true, false)
			foliageTileMap.set_cell(0, foliageTileMap.local_to_map(position), 0, Vector2i(2,1), 0);


func _physics_process(delta):
	get_input()
	set_velocity(velocity)
	move_and_slide()
	velocity = velocity
"

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(4.64023, 5.0552)

[sub_resource type="SpriteFrames" id="3"]
animations = [{
"frames": [{
"duration": 1.5,
"texture": ExtResource("2_qla6q")
}, {
"duration": 1.0,
"texture": ExtResource("3_am0tm")
}, {
"duration": 1.0,
"texture": ExtResource("4_74tr1")
}, {
"duration": 1.0,
"texture": ExtResource("5_2l6g6")
}, {
"duration": 1.5,
"texture": ExtResource("6_5m0i3")
}, {
"duration": 1.0,
"texture": ExtResource("7_tlk41")
}, {
"duration": 1.0,
"texture": ExtResource("8_h4h5p")
}, {
"duration": 1.0,
"texture": ExtResource("9_36eb4")
}],
"loop": true,
"name": &"walk_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_qfktl")
}, {
"duration": 1.0,
"texture": ExtResource("11_03jgv")
}, {
"duration": 1.0,
"texture": ExtResource("12_6ojfq")
}, {
"duration": 1.0,
"texture": ExtResource("13_0g23h")
}, {
"duration": 1.0,
"texture": ExtResource("14_fpstb")
}, {
"duration": 1.0,
"texture": ExtResource("15_qq4v4")
}, {
"duration": 1.0,
"texture": ExtResource("16_vfuav")
}, {
"duration": 1.0,
"texture": ExtResource("17_0b1hy")
}],
"loop": true,
"name": &"walk_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_fm3ix")
}, {
"duration": 1.0,
"texture": ExtResource("19_su8wb")
}, {
"duration": 1.0,
"texture": ExtResource("20_s5ip6")
}, {
"duration": 1.0,
"texture": ExtResource("21_27wcc")
}, {
"duration": 1.0,
"texture": ExtResource("22_23fdb")
}, {
"duration": 1.0,
"texture": ExtResource("23_1yxco")
}, {
"duration": 1.0,
"texture": ExtResource("24_ecqls")
}, {
"duration": 1.0,
"texture": ExtResource("25_iy5e0")
}],
"loop": true,
"name": &"walk_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.5,
"texture": ExtResource("26_p6t41")
}, {
"duration": 1.0,
"texture": ExtResource("27_i8egj")
}, {
"duration": 1.0,
"texture": ExtResource("28_s6ecs")
}, {
"duration": 1.0,
"texture": ExtResource("29_p8ai1")
}, {
"duration": 1.5,
"texture": ExtResource("30_vdh84")
}, {
"duration": 1.0,
"texture": ExtResource("31_07atg")
}, {
"duration": 1.0,
"texture": ExtResource("32_5ir67")
}, {
"duration": 1.0,
"texture": ExtResource("33_35f7t")
}],
"loop": true,
"name": &"walk_up",
"speed": 8.0
}]

[sub_resource type="GDScript" id="4"]
script/source = "extends AnimatedSprite2D


var front = load(\"res://rogue_front.png\");
var back = load(\"res://rogue_back.png\");
var left = load(\"res://rogue_left.png\");
var right = load(\"res://rogue_right.png\");

@export var companionDirection = \"LEFT\";

func get_input():
	if Input.is_action_pressed('up'):
		play(\"walk_up\")
		
	if Input.is_action_pressed('down'):
		play(\"walk_down\")
		
	if Input.is_action_pressed('right') && !Input.is_action_pressed('up') && !Input.is_action_pressed('down'):
		play(\"walk_right\")
		companionDirection = \"RIGHT\";
		
	if Input.is_action_pressed('left') && !Input.is_action_pressed('up') && !Input.is_action_pressed('down'):
		play(\"walk_left\")
		companionDirection = \"LEFT\";
		
	if !Input.is_action_pressed('right') && !Input.is_action_pressed('left') && !Input.is_action_pressed('down') && !Input.is_action_pressed('up'): 
		stop()
		frame = 0

func _physics_process(delta):
	get_input()
"

[sub_resource type="SpriteFrames" id="SpriteFrames_8sahu"]
animations = [{
"frames": [{
"duration": 7.0,
"texture": ExtResource("35_gr6gp")
}, {
"duration": 1.0,
"texture": ExtResource("36_n46o1")
}, {
"duration": 1.0,
"texture": ExtResource("37_1eyjr")
}, {
"duration": 1.0,
"texture": ExtResource("38_x7n7g")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]

[node name="player" type="CharacterBody2D" parent="."]
z_index = 2
y_sort_enabled = true
position = Vector2(16, -8)
script = SubResource("1")

[node name="hitBox" type="CollisionShape2D" parent="player"]
position = Vector2(-0.128502, 14.5218)
shape = SubResource("2")

[node name="gameCamera" type="Camera2D" parent="player"]
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 6.0

[node name="playerShadow" type="Sprite2D" parent="player"]
z_index = -1
position = Vector2(0, 14.4242)
texture = ExtResource("1_ve2m8")

[node name="player_animations" type="AnimatedSprite2D" parent="player"]
z_index = 1
y_sort_enabled = true
sprite_frames = SubResource("3")
animation = &"walk_up"
frame_progress = 0.00786341
script = SubResource("4")

[node name="friend_spot_right" type="Node2D" parent="player"]
position = Vector2(14, -14)

[node name="friend_spot_left" type="Node2D" parent="player"]
position = Vector2(-16, -14)

[node name="companion" type="CharacterBody2D" parent="."]
z_index = 3
y_sort_enabled = true
position = Vector2(30, -22)
script = ExtResource("34_0kh7o")

[node name="companionSprite" type="AnimatedSprite2D" parent="companion"]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_8sahu")
autoplay = "default"
frame_progress = 0.739829
